[package]
name = "zli"
version = "0.0.0"
authors = ['https://github.com/drbh']
edition = "2018"
description = 'ZMQ command line tool'
license = 'MIT/Apache-2.0'
keywords = [
	'zmq',
    'cli',
]
homepage = 'https://github.com/drbh/zli'
repository = 'https://github.com/drbh/zli.git'
readme = 'README.md'

[dependencies]
# zmq = "0.9.2"
zmq = { git = "https://github.com/drbh/rust-zmq", version = "0.9.2"}
clap_generate = "3.0.0-beta.2"
clap = "3.0.0-beta.2"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"